--- a/Layout1/css/styles.css
+++ b/Layout1/css/styles.css
@@ -2,8 +2,8 @@ html {
     box-sizing: border-box;
 }
 
-*, 
-*::before, 
+*,
+*::before,
 *::after {
     box-sizing: inherit;
 }
@@ -12,12 +12,12 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
-    }
-    
+}
+
 body {
     font-family: 'Exo', sans-serif;
     /*font-family: 'Lato', sans-serif;*/
-    color: #626262;
+    color: #282828;
     font-size: 0;
 }
 
@@ -26,12 +26,13 @@ body {
     margin: 0 auto;
 }
 
-header{
+header {
     background-image: url(../img/header-bg.png);
+    background-size: cover;
     height: 812px;
 }
 
-h1{
+h1 {
     font-size: 60px;
     line-height: 75px;
     font-weight: 100;
@@ -39,13 +40,48 @@ h1{
     margin-block-start: 0;
 }
 
-.header{
-    margin:0 auto;
-
+.header {
+    margin: 0 auto;
     width: 750px;
     text-align: center;
 }
 
-.h1{
-    padding-top: 227px;
+header img {
+    margin: auto;
+    margin-top: 2px;
+    margin-bottom: 3px;
+    cursor: pointer;
+}
+
+.h1 {
+    padding-top: 216px;
+}
+
+.button-header {
+    display: block;
+    border: 1px solid #ff6d6d;
+    border-radius: 3px;
+    background-color: #ff6d6d;
+    padding: 16px 45px;
+    font-family: 'Exo', san-serif;
+    font-size: 16px;
+    color: #ffffff;
+    margin: 39px auto 19px;
+    cursor: pointer;
+    letter-spacing: 4px;
+}
+
+.button-header:hover,
+.button-header:focus {
+    border: 1px solid #ff6d6d;
+    background-color: #ffffff;
+    color: #ec5858;
+}
+
+.header-description {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 15px;
+    color: #767678;
+    letter-spacing: 1px;
 }
